vbnc/vbnc/tests/Errors/30512-29.vb
Option Explicit On
Option Strict On

Class X
    Public Shared Sub Main()
        Dim x As Boolean
        Dim y As Integer = x
    End Sub
End Class